2005-03-09  Pascal Obry  <pascal@obry.org>

	* makefile:
	(WSDL_TESTS): Add test_wsdl6.

	* test_wsdl6.adb, test_wsdl6.out, test_wsdl6.wsdl:
	Initial revision.

2005-02-15  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* zapp.adb:
	Don't with Ada.Strings.Unbounded and AWS.MIME.
	Use Get_Free_Port.

2005-02-05  Pascal Obry  <pascal@obry.org>

	* sp_pck.adb:
	Minor comment fixes.
	Update copyright notice.

2005-01-24  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* auth1.adb:
	Test AWS.Status.Authorization_Tail too.

2004-12-23  Pascal Obry  <pascal@obry.net>

	* line_status_pck.ads, line_status_pck.adb:
	Initial revision.

	* line_status.adb, line_status.out, line_status.tmplt:
	Initial revision.

2004-12-14  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait_proc.adb, wait.out, wait_sec.out:
	Remove Read numbering. No numbering guarantee.

	* makefile, dirop.out:
	Fix .png file touch time.

2004-12-13  Pascal Obry  <pascal@obry.org>

	* makefile:
	(clean): Update to new namespace.

	* interoplab_main1.adb:
	Update namespaces checks.

	* interoplab_main1.wsdl:
	Change the name of the namespace to avoid conflics with files
	 generated in the demos directory.

2004-12-13  Pascal Obry  <pascal@obry.org>

	* makefile:
	(init): Copy icons directory here for the dirop test.
	(clean): Update accordingly.

	* dirop.adb:
	Update directory containing icons.

	* dirop.out:
	Update output.

2004-12-13  Pascal Obry  <pascal@obry.org>

	* dispatch1.adb, dispatch1.out:
	Update to test for new Prefix option in URI Registrer routine.

2004-12-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait_proc.adb, wait.out, wait_sec.out:
	Rewrite regression test.

2004-12-07  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* dispatch_vh.adb:
	Use modified configuration to start server.

2004-12-04  Pascal Obry  <pascal@obry.org>

	* makefile:
	(build_driver): Add gnatmake's -m option to build the driver.

2004-12-02  Pascal Obry  <pascal@obry.org>

	* wsdl_b.out:
	Update output.
